--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
     <header class="header-line">
         <div class="menu-container container">
             <nav class="menu-nav">
-                <a class="menu-logo" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
-                <ul class="menu-nav-list">
-                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Agencja</a></li>
-                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./portfolio.html">Portfolio</a></li>
-                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
+                <a class="menu-logo link" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
+                <ul class="menu-nav-list list">
+                    <li class="menu-nav-item"> <a class="menu-nav-link link" href="./index.html">Agencja</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link link" href="./index.html">Kontakt</a></li>
                 </ul>
             </nav>
-            <ul class="menu-contacts">
-                <li class="menu-contact-item"><a class="menu-contact-link"
+            <ul class="menu-contacts list" style="display: flex;">
+                <li class="menu-contact-item"><a class="menu-contact-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="menu-contact-item"><a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+                <li class="menu-contact-item"><a class="menu-contact-link link" href="tel:+48111111111">+48 111 111
+                        111</a>
                 </li>
             </ul>
         </div>
@@ -39,40 +40,42 @@
 
     <main>
         <section class="hero-container section">
-            <div class="hero">
+            <div class="container">
                 <h1 class="hero-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button class="hero-button" type="button">Zamów usługe</button>
             </div>
         </section>
-        <section class="features container section">
-            <h2 class="hidden">features</h2>
-            <ul class="features-list">
-                <li class="features-item">
-                    <h3 class="features-title">LOREM IPSUM</h3>
-                    <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                        arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-title">LOREM IPSUM</h3>
-                    <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                        arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-title">LOREM IPSUM</h3>
-                    <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                        arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-title">LOREM IPSUM</h3>
-                    <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                        arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-                </li>
-            </ul>
+        <section class="features section">
+            <div class="container">
+                <h2 class="visually-hidden">features</h2>
+                <ul class="features-list list">
+                    <li class="features-item">
+                        <h3 class="features-title">LOREM IPSUM</h3>
+                        <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                            arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-title">LOREM IPSUM</h3>
+                        <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                            arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-title">LOREM IPSUM</h3>
+                        <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                            arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-title">LOREM IPSUM</h3>
+                        <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                            arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section">
             <div class="about container">
                 <h2 class="about-title">Czym się zajmujemy</h2>
-                <ul>
+                <ul class="list">
                     <li class="about-item"><img src="./images/img-5.jpg" alt="dłonie męzczyzny na klawiaturze komputera"
                             width="370" height="294" /></li>
                     <li class="about-item"><img src="./images/img-6.jpg" alt="ręka trzyma telefon nad laptopem"
@@ -87,7 +90,7 @@
         <section class="team section">
             <div class="container">
                 <h2 class="team-title">Nasz zespół</h2>
-                <ul class="team-list">
+                <ul class="team-list list">
                     <li class="team-item">
                         <figure><img class="img-item" src="./images/img.jpg" alt="John Doe, Product Designer"
                                 width="270" height="260" />
@@ -131,15 +134,16 @@
 
     <footer>
         <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
+            <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
             <address class="footer-adress-list">
-                <ul class="footer-contacts">
-                    <li class="footer-item"><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7"
+                <ul class="footer-contacts list">
+                    <li class="footer-item"><a class="footer-adress link" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7"
                             target="_blank" rel="noreferrer noopener nofollow">
                             Warszawa, Aleje Jerozolimskie 21 </a></li>
-                    <li class="footer-item"><a class="footer-contact"
+                    <li class="footer-item"><a class="footer-contact link"
                             href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="footer-item"><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a></li>
+                    <li class="footer-item"><a class="footer-contact link" href="tel:+48111111111">+48 111 111 111</a>
+                    </li>
                 </ul>
             </address>
         </div>
