--- a/portfolio.html
+++ b/portfolio.html
@@ -21,140 +21,143 @@
     <header class="header-line">
         <div class="menu-container container">
             <nav class="menu-nav">
-                <a class="menu-logo" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
-                <ul class="menu-nav-list">
-                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Agencja</a></li>
-                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./portfolio.html">Portfolio</a></li>
-                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
+                <a class="menu-logo link" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
+                <ul class="menu-nav-list list">
+                    <li class="menu-nav-item"> <a class="menu-nav-link link" href="./index.html">Agencja</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link link" href="./index.html">Kontakt</a></li>
                 </ul>
             </nav>
-            <ul class="menu-contacts">
-                <li class="menu-contact-item"><a class="menu-contact-link"
+            <ul class="menu-contacts list" style="display: flex;">
+                <li class="menu-contact-item"><a class="menu-contact-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="menu-contact-item"><a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+                <li class="menu-contact-item"><a class="menu-contact-link link" href="tel:+48111111111">+48 111 111
+                        111</a>
                 </li>
             </ul>
         </div>
     </header>
 
     <main>
-        <section class="portfolio-img container section">
-            <h2 class="hidden">portfolio images</h2>
-            <ul class="button-nav">
-                <li class="button-item">
-                    <button type="button">Wszystkie</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Strony</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Aplikacje</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Dizajn</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Marketing</button>
-                </li>
-            </ul>
-            <ul class="portfolio-img-containers">
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-9.jpg" alt="technocrack" width="370"
-                            height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Technocrack</p>
-                            <p class="portfolio-img-text">Strona internetowa</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-8.jpg"
-                            alt="Grafika New Orlean vs Golden Star" width="370" height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Grafika New Orlean vs Golden Star</p>
-                            <p class="portfolio-img-text">Dizajn</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-7.jpg" alt="Restauracja Seafood"
-                            width="370" height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Restauracja Seafood</p>
-                            <p class="portfolio-img-text">Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-6.jpg" alt="Projekt Prime" width="370"
-                            height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Projekt Prime</p>
-                            <p class="portfolio-img-text">Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-5.jpg" alt="Projekt Boxes" width="370"
-                            height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Projekt Boxes</p>
-                            <p class="portfolio-img-text">Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-4.jpg" alt="Inspiration has no Borders"
-                            width="370" height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Inspiration has no Borders</p>
-                            <p class="portfolio-img-text">Strona internetowa</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-3.jpg" alt="Magazyn Limited Edition"
-                            width="370" height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Magazyn Limited Edition</p>
-                            <p class="portfolio-img-text">Dizajn</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img-2.jpg" alt="Projekt LAB" width="370"
-                            height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Projekt LAB</p>
-                            <p class="portfolio-img-text">Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="portfolio-img-item">
-                    <figure><img class="img-item" src="./images/portfolio-img.jpg" alt="Growing Business" width="370"
-                            height="294" />
-                        <figcaption class="figcaption-item">
-                            <p class="portfolio-img-title">Growing Business</p>
-                            <p class="portfolio-img-text">Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
+        <section class="portfolio-img section">
+            <div class="container">
+                <h1 class="visually-hidden">portfolio images</h1>
+                <ul class="button-nav list">
+                    <li class="button-item">
+                        <button type="button">Wszystkie</button>
+                    </li>
+                    <li class="button-item">
+                        <button type="button">Strony</button>
+                    </li>
+                    <li class="button-item">
+                        <button type="button">Aplikacje</button>
+                    </li>
+                    <li class="button-item">
+                        <button type="button">Dizajn</button>
+                    </li>
+                    <li class="button-item">
+                        <button type="button">Marketing</button>
+                    </li>
+                </ul>
+                <ul class="portfolio-img-containers list">
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-9.jpg"
+                                alt="technocrack" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Technocrack</h2>
+                                <p class="portfolio-img-text">Strona internetowa</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-8.jpg"
+                                alt="Grafika New Orlean vs Golden Star" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Grafika New Orlean vs Golden Star</h2>
+                                <p class="portfolio-img-text">Dizajn</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-7.jpg"
+                                alt="Restauracja Seafood" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Restauracja Seafood</h2>
+                                <p class="portfolio-img-text">Aplikacja</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-6.jpg"
+                                alt="Projekt Prime" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Projekt Prime</h2>
+                                <p class="portfolio-img-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-5.jpg"
+                                alt="Projekt Boxes" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Projekt Boxes</h2>
+                                <p class="portfolio-img-text">Aplikacja</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-4.jpg"
+                                alt="Inspiration has no Borders" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Inspiration has no Borders</h2>
+                                <p class="portfolio-img-text">Strona internetowa</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-3.jpg"
+                                alt="Magazyn Limited Edition" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Magazyn Limited Edition</h2>
+                                <p class="portfolio-img-text">Dizajn</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img-2.jpg"
+                                alt="Projekt LAB" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Projekt LAB</h2>
+                                <p class="portfolio-img-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-img-item">
+                        <a class="link" href=""><img class="img-item" src="./images/portfolio-img.jpg"
+                                alt="Growing Business" width="370" height="294" />
+                            <div class="figcaption-item">
+                                <h2 class="portfolio-img-title">Growing Business</h2>
+                                <p class="portfolio-img-text">Aplikacja</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
+            <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
             <address class="footer-adress-list">
-                <ul class="footer-contacts">
-                    <li class="footer-item"><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7"
+                <ul class="footer-contacts list">
+                    <li class="footer-item"><a class="footer-adress link" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7"
                             target="_blank" rel="noreferrer noopener nofollow">
                             Warszawa, Aleje Jerozolimskie 21 </a></li>
-                    <li class="footer-item"><a class="footer-contact"
-                            href="mailto:info@example.com">info@example.com</a>
+                    <li class="footer-item"><a class="footer-contact link"
+                            href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="footer-item"><a class="footer-contact link" href="tel:+48111111111">+48 111 111 111</a>
                     </li>
-                    <li class="footer-item"><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a></li>
                 </ul>
             </address>
         </div>
